@@ -155,12 +155,12 @@ REPOSITORY
     <https://github.com/tupinek/Map-Tube-Text-Table>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2014-2015 Michal Špaček
+     © 2014-2015 Michal Josef Špaček
      Artistic License
      BSD 2-Clause License
 
