@@ -4,6 +4,7 @@
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
  - Rewrite SEE ALSO section to new style.
  - Update Module::Install to 1.18 version.
+ - Update author name.
 
 0.04 2015-01-24T18:42:18+01:00
  [Map::Tube::Text::Table]
